syntax = "proto2";

option java_package = "com.android.dialer.calldetails";
option java_multiple_files = true;


import "java/com/android/dialer/enrichedcall/historyquery/proto/history_result.proto";

package com.android.dialer.calldetails;

message CallDetailsEntries {
  message CallDetailsEntry {
    optional int64 call_id = 1;
    optional int32 call_type = 2;
    optional int32 features = 3;
    optional int64 date = 4;
    optional int64 duration = 5;
    optional int64 data_usage = 6;
    repeated enrichedcall.historyquery.proto.HistoryResult history_results = 7;
    optional bool has_rtt_transcript = 8;
    // A unique ID that could be used to map a call log entry to a {@link
    // android.telecom.Call}. This is different from call_id which is id of call
    // log entry.
    // On pre-Q this will be {@link android.provider.CallLog.Calls#DATE} which
    // is same as {@link com.android.telecom.Call#getCreationTimeMillis()}.
    // Starting from Q this will be a call UUID generated by system to associate
    // a call log to a telecom call.
    optional string call_mapping_id = 9;
  }

  repeated CallDetailsEntry entries = 1;
}
