// Copyright (C) 2017 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License

syntax = "proto2";

option java_package = "com.android.dialer";
option java_multiple_files = true;


package com.android.dialer;

// A proto containing a list of IDs of the rows in AnnotatedCallLog that are
// coalesced into a row in CoalescedAnnotatedCallLog.
// For example, if rows in the AnnotatedCallLog with IDs 123, 124, 125 are
// coalesced into one row, the list in the proto will be [123, 124, 125].
message CoalescedIds {
  repeated int64 coalesced_id = 1;
}