syntax = "proto2";

option java_package = "com.android.dialer.dialercontact";
option java_multiple_files = true;


package com.android.dialer.dialercontact;

message DialerContact {
  optional fixed64 photo_id = 1;
  optional string photo_uri = 2;
  optional string contact_uri = 3;
  optional string name_or_number = 4;

  // Contact's phone number. Should not contain post dial digits.
  optional string number = 6;
  optional string display_number = 7;
  optional string number_label = 8;
  optional int32 contact_type = 9;
  optional SimDetails sim_details = 10;

  // {@link CallLog.Calls#POST_DIAL_DIGITS}.
  optional string post_dial_digits = 11;
}

message SimDetails {
  // Human readable netwrork name displayed to user where relevant
  optional string network = 1;
  // This value represents a hex representation of a color (i.e. #ffffff)
  optional int32 color = 2;
}
